Fixed double and wrapping names

--- a/client_react/src/components/ConversationWindow.css
+++ b/client_react/src/components/ConversationWindow.css
@@ -13,6 +13,7 @@
   backdrop-filter: blur(10px);
   direction: rtl;
   text-align: start;
+  white-space: nowrap;
 
   /* Truncate Text */
   white-space: nowrap;
